--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "e_bank project",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index.js"
   },
+  "type": "module",
   "author": "Pedro Victor",
   "license": "ISC",
   "dependencies": {
